Hide Anychart credits

--- a/app/src/main/res/layout/fragment_average_per_month.xml
+++ b/app/src/main/res/layout/fragment_average_per_month.xml
@@ -51,4 +51,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="16sp"
+        android:background="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
