--- a/app/src/main/res/layout/fragment_average_per_month.xml
+++ b/app/src/main/res/layout/fragment_average_per_month.xml
@@ -7,33 +7,54 @@
     tools:context=".statistictabs.AveragePerMonthFragment">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/yearTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:text="@string/spinner_text_year"
         app:layout_constraintBottom_toTopOf="@id/barrier"
+        app:layout_constraintEnd_toStartOf="@id/yearSpinner"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/spinner"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_chainStyle="packed"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/yearSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/textView"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/yearTextView"
+        app:layout_constraintEnd_toStartOf="@id/typeTextView"
         app:layout_constraintBottom_toTopOf="@id/barrier" />
+
+    <TextView
+        android:id="@+id/typeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:text="@string/spinner_text_type"
+        app:layout_constraintBottom_toTopOf="@id/barrier"
+        app:layout_constraintStart_toEndOf="@id/yearSpinner"
+        app:layout_constraintEnd_toStartOf="@id/typeSpinner"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <Spinner
+        android:id="@+id/typeSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:entries="@array/spinner_average_chart_type"
+        app:layout_constraintBottom_toTopOf="@id/barrier"
+        app:layout_constraintStart_toEndOf="@id/typeTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="textView,spinner" />
+        app:constraint_referenced_ids="yearTextView,yearSpinner" />
 
     <com.anychart.AnyChartView
         android:id="@+id/graph_average_per_months"
