--- a/app/src/main/res/layout/fragment_average_per_month.xml
+++ b/app/src/main/res/layout/fragment_average_per_month.xml
@@ -10,7 +10,7 @@
         android:id="@+id/yearTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginVertical="8dp"
         android:text="@string/spinner_text_year"
         app:layout_constraintBottom_toTopOf="@id/barrier"
         app:layout_constraintEnd_toStartOf="@id/yearSpinner"
@@ -21,7 +21,7 @@
         android:id="@+id/yearSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginVertical="8dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/yearTextView"
         app:layout_constraintEnd_toStartOf="@id/typeTextView"
@@ -31,7 +31,7 @@
         android:id="@+id/typeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginVertical="8dp"
         android:text="@string/spinner_text_type"
         app:layout_constraintBottom_toTopOf="@id/barrier"
         app:layout_constraintStart_toEndOf="@id/yearSpinner"
@@ -42,7 +42,7 @@
         android:id="@+id/typeSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginVertical="8dp"
         android:entries="@array/spinner_average_chart_type"
         app:layout_constraintBottom_toTopOf="@id/barrier"
         app:layout_constraintStart_toEndOf="@id/typeTextView"
@@ -76,6 +76,7 @@
         android:layout_width="match_parent"
         android:layout_height="16sp"
         android:background="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:backgroundTint="?android:colorBackground"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
