Changes to AveragePerMonthFragment to use MPAndroidChart instead of AnyChart

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -58,5 +58,9 @@
         <item name="calendar_day_background_color_max">@color/md_red_A700</item>
         <item name="calendar_day_text_disabled_color">@color/md_black_1000_38</item>
         <item name="calendar_day_notification_color">@color/md_purple_A700</item>
+
+<!--        Stat-->
+        <item name="stat_tab_text_color">@color/md_black_1000</item>
+
     </style>
 </resources>
