--- a/app/src/main/res/layout/fragment_average_per_month.xml
+++ b/app/src/main/res/layout/fragment_average_per_month.xml
@@ -56,27 +56,12 @@
         app:barrierDirection="bottom"
         app:constraint_referenced_ids="yearTextView,yearSpinner" />
 
-    <com.anychart.AnyChartView
+    <com.github.mikephil.charting.charts.HorizontalBarChart
         android:id="@+id/graph_average_per_months"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="?android:colorBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/barrier" />
-
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="16sp"
-        android:background="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:backgroundTint="?android:colorBackground"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
