--- a/app/src/main/res/layout/fragment_floor_pie_chart.xml
+++ b/app/src/main/res/layout/fragment_floor_pie_chart.xml
@@ -6,26 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".statistictabs.FloorPieChartFragment">
 
-    <com.anychart.AnyChartView
+    <TextView
+        android:id="@+id/frag_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/floor_pie_chart_title"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:padding="12dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/floor_pie_chart"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="?android:colorBackground"
+        android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="16sp"
-        android:background="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/frag_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
