--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -14,6 +14,6 @@
 
     <string-array name="spinner_average_chart_type">
         <item>Bingo</item>
-        <item>Nombre d\'arrêt</item>
+        <item>Arrêts</item>
     </string-array>
 </resources>
