Adding a ListPreference to register the number of floors wanted for grid generation

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -12,6 +12,16 @@
         <item>dark</item>
     </string-array>
 
+    <string-array name="number_floors_entries">
+        <item>@string/number_floors_10</item>
+        <item>@string/number_floors_7</item>
+    </string-array>
+
+    <string-array name="number_floors_values">
+        <item>10</item>
+        <item>7</item>
+    </string-array>
+
     <string-array name="spinner_average_chart_type">
         <item>Bingo</item>
         <item>Arrêts</item>
