--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -38,6 +38,16 @@
             app:title="@string/update_now_text"
             app:allowDividerBelow="true"
             />
+        <ListPreference
+            app:entries="@array/update_frequency_entries"
+            app:entryValues="@array/update_frequency_values"
+            app:defaultValue="monthly"
+            app:key="update_frequency_preference"
+            app:title="@string/update_frequency_title"
+            app:useSimpleSummaryProvider="true"
+            app:allowDividerAbove="true"
+            app:allowDividerBelow="true"
+            />
     </PreferenceCategory>
 
 </PreferenceScreen>
