--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -26,12 +26,14 @@
         <item>@string/daily</item>
         <item>@string/weekly</item>
         <item>@string/monthly</item>
+        <item>@string/never</item>
     </string-array>
 
     <string-array name="update_frequency_values">
         <item>daily</item>
         <item>weekly</item>
         <item>monthly</item>
+        <item>never</item>
     </string-array>
 
     <string-array name="spinner_average_chart_type">
