--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -15,11 +15,13 @@
     <string-array name="floor_layout_entries">
         <item>@string/floor_21</item>
         <item>@string/floor_18</item>
+        <item>@string/floor_17</item>
     </string-array>
 
     <string-array name="floor_layout_values">
         <item>21</item>
         <item>18</item>
+        <item>17</item>
     </string-array>
 
     <string-array name="update_frequency_entries">
