--- a/app/src/main/res/layout/fragment_average_per_month.xml
+++ b/app/src/main/res/layout/fragment_average_per_month.xml
@@ -11,19 +11,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
+        android:layout_marginHorizontal="4dp"
         android:text="@string/spinner_text_year"
         app:layout_constraintBottom_toTopOf="@id/barrier"
         app:layout_constraintEnd_toStartOf="@id/yearSpinner"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed" />
 
     <Spinner
         android:id="@+id/yearSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
+        android:layout_marginHorizontal="4dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/yearTextView"
+        app:layout_constraintEnd_toStartOf="@id/sepView"
+        app:layout_constraintBottom_toTopOf="@id/barrier"
+        app:layout_constraintHorizontal_chainStyle="packed" />
+
+    <View
+        android:id="@+id/sepView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintEnd_toStartOf="@id/typeTextView"
         app:layout_constraintBottom_toTopOf="@id/barrier" />
 
@@ -32,29 +43,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
+        android:layout_marginHorizontal="4dp"
         android:text="@string/spinner_text_type"
         app:layout_constraintBottom_toTopOf="@id/barrier"
         app:layout_constraintStart_toEndOf="@id/yearSpinner"
         app:layout_constraintEnd_toStartOf="@id/typeSpinner"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed" />
 
     <Spinner
         android:id="@+id/typeSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
+        android:layout_marginHorizontal="4dp"
         android:entries="@array/spinner_average_chart_type"
         app:layout_constraintBottom_toTopOf="@id/barrier"
         app:layout_constraintStart_toEndOf="@id/typeTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="yearTextView,yearSpinner" />
+        app:constraint_referenced_ids="yearTextView,yearSpinner, typeTextView, typeSpinner" />
 
     <com.github.mikephil.charting.charts.HorizontalBarChart
         android:id="@+id/graph_average_per_months"
