--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -54,8 +54,8 @@
         <item name="calendar_day_default_text_color">@color/md_black_1000</item>
         <item name="calendar_day_border_color">@color/divider_light</item>
         <item name="calendar_day_selected_border_color">@color/accent_lightblue</item>
-        <item name="calendar_day_background_color_min">@color/md_green_500</item>
-        <item name="calendar_day_background_color_max">@color/md_red_A700</item>
+        <item name="calendar_day_background_color_min">@color/cal_green</item>
+        <item name="calendar_day_background_color_max">@color/cal_red</item>
         <item name="calendar_day_text_disabled_color">@color/md_black_1000_38</item>
         <item name="calendar_day_notification_color">@color/md_purple_A700</item>
 
